<resources>
    <string name="app_name">QRCodeCounter</string>
    <string name="scan">Scan</string>

    <string name="hello_world">Welcome to Android bar Code Scanner By RajDeol. For more details visit my blog </string>
    <string name="blog_url">http://blog.whomeninja.in/android-barcode-scanner/</string>
    <string name="action_settings">Settings</string>
    <string name="btn_scan_now">Scan Now</string>
    <string name="scan_bar_code">Scan a Bar Code</string>
    <string name="turn_on_flashlight">Flash On</string>
    <string name="turn_off_flashlight">Flash Off</string>
    <string name="generate">generate pdf</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="type_your_vehicle_no">Type your vehicle no</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="role">Role</string>
</resources>
