<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.softex.barcopdesample.activity.LoginActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/login"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textView" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="40dp"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            />

            <TextView
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/role"
                android:layout_height="wrap_content"
                />
            <Spinner
                android:layout_marginBottom="10dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:backgroundTint="@color/colorAccent"
                android:textAllCaps="true"
                android:id="@+id/spinner" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

           >

            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/username"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/username"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:gravity="left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/password"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:id="@+id/password" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            >

            <Button
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_height="wrap_content"
                android:id="@+id/cancel" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/submit"
                android:layout_height="wrap_content"
                android:id="@+id/submit" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:text="Version 1.1"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/colorAccent"
        android:gravity="center"
         />
</LinearLayout>
